--- a/index.html
+++ b/index.html
@@ -1,203 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gestión de Stock</title>
-  <style>
-    :root {
-      --bg: #f4f6f8;
-      --card: #ffffff;
-      --text: #222;
-      --primary: #27ae60;
-      --secondary: #2980b9;
-      --danger: #c0392b;
-    }
-
-    body.dark {
-      --bg: #121212;
-      --card: #1e1e1e;
-      --text: #f1f1f1;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      padding: 20px;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    h1 { text-align: center; }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: var(--card);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: background 0.3s;
-    }
-
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
-    }
-
-    .form {
-      display: grid;
-      grid-template-columns: 2fr 1fr 1fr auto;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    input {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button.add { background: var(--primary); color: white; }
-    button.edit { background: var(--secondary); color: white; }
-    button.delete { background: var(--danger); color: white; }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      border-bottom: 1px solid #ddd;
-      padding: 10px;
-      text-align: center;
-    }
-
-    th { background: rgba(0,0,0,0.05); }
-
-    body.dark th { background: rgba(255,255,255,0.05); }
-
-    .actions button { margin: 0 3px; }
-
-    .toggle {
-      background: none;
-      border: 1px solid #ccc;
-      color: var(--text);
-    }
-
-    .editable {
-      width: 60px;
-      padding: 5px;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Stock y Deudas</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    transition: background 0.3s, color 0.3s;
+  }
+  .dark-mode {
+    background: #1e1e1e;
+    color: #f0f0f0;
+  }
+  h2 {
+    margin-top: 20px;
+  }
+  input[type="number"], input[type="text"] {
+    width: 80px;
+    padding: 5px;
+    margin: 5px;
+  }
+  button {
+    padding: 5px 10px;
+    margin: 5px;
+  }
+  .minimal {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  table {
+    border-collapse: collapse;
+    margin-top: 10px;
+    width: 100%;
+  }
+  table, th, td {
+    border: 1px solid #ccc;
+    padding: 5px;
+    text-align: left;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <div class="top-bar">
-      <h1>Stock</h1>
-      <button class="toggle" onclick="toggleTheme()">🌙 / ☀️</button>
-    </div>
 
-    <div class="form">
-      <input type="text" id="product" placeholder="Producto" />
-      <input type="number" id="quantity" placeholder="Cantidad" />
-      <input type="number" id="price" placeholder="Precio" step="0.01" />
-      <button class="add" onclick="addProduct()">Agregar</button>
-    </div>
+<button onclick="toggleMode()">Modo Oscuro/Claro</button>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Producto</th>
-          <th>Cantidad</th>
-          <th>Precio</th>
-          <th>Total</th>
-          <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody id="stockTable"></tbody>
-    </table>
+<h2>Opciones</h2>
+<select id="opciones" onchange="mostrarSeccion()">
+  <option value="stock">Stock</option>
+  <option value="deudas">Deudas</option>
+</select>
+
+<!-- SECCION STOCK -->
+<div id="stock-seccion">
+  <h2>Stock de Productos</h2>
+  <div>
+    Producto 1: <input type="number" class="minimal" id="prod1" value="0">
+    Producto 2: <input type="number" class="minimal" id="prod2" value="0">
+    Producto 3: <input type="number" class="minimal" id="prod3" value="0">
+    <button onclick="guardarStock()">Guardar Stock</button>
   </div>
+  <p>Total Stock: <span id="total-stock">0</span></p>
+</div>
 
-  <script>
-    let stock = JSON.parse(localStorage.getItem('stock')) || [];
-    let theme = localStorage.getItem('theme') || 'light';
+<!-- SECCION DEUDAS -->
+<div id="deudas-seccion" style="display:none;">
+  <h2>Deudas</h2>
+  <div>
+    Nombre: <input type="text" id="nombre-deuda" class="minimal">
+    Cantidad: <input type="number" id="cantidad-deuda" class="minimal" value="0">
+    <button onclick="agregarDeuda()">Agregar Deuda</button>
+  </div>
+  <table id="tabla-deudas">
+    <tr>
+      <th>Nombre</th>
+      <th>Cantidad</th>
+    </tr>
+  </table>
+  <p>Total Deudas: <span id="total-deudas">0</span></p>
+</div>
 
-    if (theme === 'dark') document.body.classList.add('dark');
+<script>
+  // Modo oscuro / claro
+  function toggleMode() {
+    document.body.classList.toggle('dark-mode');
+  }
 
-    function saveStock() {
-      localStorage.setItem('stock', JSON.stringify(stock));
+  // Mostrar sección según selección
+  function mostrarSeccion() {
+    const opcion = document.getElementById('opciones').value;
+    document.getElementById('stock-seccion').style.display = opcion === 'stock' ? 'block' : 'none';
+    document.getElementById('deudas-seccion').style.display = opcion === 'deudas' ? 'block' : 'none';
+  }
+
+  // Guardar stock
+  function guardarStock() {
+    const prod1 = Number(document.getElementById('prod1').value);
+    const prod2 = Number(document.getElementById('prod2').value);
+    const prod3 = Number(document.getElementById('prod3').value);
+    const total = prod1 + prod2 + prod3;
+    document.getElementById('total-stock').textContent = total;
+    localStorage.setItem('stock', JSON.stringify({prod1, prod2, prod3, total}));
+  }
+
+  // Cargar stock al inicio
+  window.onload = function() {
+    const stockGuardado = JSON.parse(localStorage.getItem('stock'));
+    if(stockGuardado) {
+      document.getElementById('prod1').value = stockGuardado.prod1;
+      document.getElementById('prod2').value = stockGuardado.prod2;
+      document.getElementById('prod3').value = stockGuardado.prod3;
+      document.getElementById('total-stock').textContent = stockGuardado.total;
     }
+  }
 
-    function renderStock() {
-      const table = document.getElementById('stockTable');
-      table.innerHTML = '';
+  // Deudas
+  let deudas = [];
 
-      stock.forEach((item, index) => {
-        const row = table.insertRow();
-
-        row.innerHTML = `
-          <td>${item.product}</td>
-          <td><input class="editable" type="number" value="${item.quantity}" onchange="updateQuantity(${index}, this.value)"></td>
-          <td><input class="editable" type="number" step="0.01" value="${item.price}" onchange="updatePrice(${index}, this.value)"></td>
-          <td>$${(item.quantity * item.price).toFixed(2)}</td>
-          <td class="actions">
-            <button class="delete" onclick="deleteProduct(${index})">✕</button>
-          </td>
-        `;
-      });
+  function agregarDeuda() {
+    const nombre = document.getElementById('nombre-deuda').value.trim();
+    const cantidad = Number(document.getElementById('cantidad-deuda').value);
+    if(nombre && cantidad > 0) {
+      deudas.push({nombre, cantidad});
+      actualizarTablaDeudas();
+      document.getElementById('nombre-deuda').value = '';
+      document.getElementById('cantidad-deuda').value = 0;
+      guardarDeudas();
     }
+  }
 
-    function addProduct() {
-      const product = document.getElementById('product').value;
-      const quantity = document.getElementById('quantity').value;
-      const price = document.getElementById('price').value;
+  function actualizarTablaDeudas() {
+    const tabla = document.getElementById('tabla-deudas');
+    tabla.innerHTML = `<tr><th>Nombre</th><th>Cantidad</th></tr>`;
+    let total = 0;
+    deudas.forEach(d => {
+      const row = tabla.insertRow();
+      row.insertCell(0).textContent = d.nombre;
+      row.insertCell(1).textContent = d.cantidad;
+      total += d.cantidad;
+    });
+    document.getElementById('total-deudas').textContent = total;
+  }
 
-      if (!product || !quantity || !price) return alert('Completa todos los campos');
+  function guardarDeudas() {
+    localStorage.setItem('deudas', JSON.stringify(deudas));
+  }
 
-      stock.push({ product, quantity: Number(quantity), price: Number(price) });
-      saveStock();
-      renderStock();
-
-      document.getElementById('product').value = '';
-      document.getElementById('quantity').value = '';
-      document.getElementById('price').value = '';
+  function cargarDeudas() {
+    const deudasGuardadas = JSON.parse(localStorage.getItem('deudas'));
+    if(deudasGuardadas) {
+      deudas = deudasGuardadas;
+      actualizarTablaDeudas();
     }
+  }
 
-    function updateQuantity(index, value) {
-      stock[index].quantity = Number(value);
-      saveStock();
-      renderStock();
-    }
+  cargarDeudas();
+</script>
 
-    function updatePrice(index, value) {
-      stock[index].price = Number(value);
-      saveStock();
-      renderStock();
-    }
-
-    function deleteProduct(index) {
-      stock.splice(index, 1);
-      saveStock();
-      renderStock();
-    }
-
-    function toggleTheme() {
-      document.body.classList.toggle('dark');
-      localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
-    }
-
-    renderStock();
-  </script>
 </body>
 </html>
+
